--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-This is Index Page in Web App
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>First App Service</title>
+</head>
+<body>
+    <h2>Welcome to App Service by Priyanshu</h2>
+</body>
+</html>
